// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Portfolio/> Snapshot renders without crashing using mount 1`] = `
<Portfolio>
  <styled.div>
    <div
      className="sc-fKgJPI drgXhq"
    >
      <Home>
        <styled.section
          id="home"
        >
          <section
            className="sc-fFSPTT UxeRs"
            id="home"
          >
            <h1>
              Israel Deorce
            </h1>
            <styled.p
              className="subtitle"
            >
              <p
                className="sc-bkbkJK jhAOQg subtitle"
              >
                subtitle
              </p>
            </styled.p>
            <ExternalButtons>
              <styled.div>
                <div
                  className="sc-bdnxRM jJHyKE"
                >
                  <UIButton
                    id="blog-button"
                    label="button.visit_my_blog"
                  >
                    <styled.button
                      onClick={[Function]}
                      secondary={false}
                    >
                      <button
                        className="sc-crzoAE hOvMwS"
                        onClick={[Function]}
                      >
                        <span>
                          button.visit_my_blog
                        </span>
                      </button>
                    </styled.button>
                  </UIButton>
                  <UIButton
                    id="resume-button"
                    label="button.resume"
                    onClick={[Function]}
                    rightIcon={<FaGoogleDrive />}
                    secondary={true}
                  >
                    <styled.button
                      onClick={[Function]}
                      secondary={true}
                    >
                      <button
                        className="sc-crzoAE foTsck"
                        onClick={[Function]}
                      >
                        <span>
                          button.resume
                        </span>
                        <FaGoogleDrive>
                          <IconBase
                            attr={
                              Object {
                                "viewBox": "0 0 512 512",
                              }
                            }
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              stroke="currentColor"
                              strokeWidth="0"
                              style={
                                Object {
                                  "color": undefined,
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"
                                key="0"
                              />
                            </svg>
                          </IconBase>
                        </FaGoogleDrive>
                      </button>
                    </styled.button>
                  </UIButton>
                </div>
              </styled.div>
            </ExternalButtons>
          </section>
        </styled.section>
      </Home>
      <About>
        <section
          id="about"
        >
          <h2>
            button.about_me
          </h2>
          <styled.div>
            <div
              className="sc-iemWCZ cVeLS"
            >
              <p>
                desc.about_1
              </p>
              <p>
                desc.about_2
              </p>
            </div>
          </styled.div>
        </section>
      </About>
      <Skills>
        <section
          id="skills"
        >
          <h2>
            button.skills
          </h2>
          <styled.div>
            <div
              className="sc-dIvrsQ wBbOE"
            >
              <ProgressIndicator
                description="skills.software_engineering"
                percentage={99}
              >
                <styled.div>
                  <div
                    className="sc-dIsUp kRpPEh"
                  >
                    <styled.div>
                      <div
                        className="sc-bqGGPW jUrrst"
                      >
                        <styled.div
                          percentage={99}
                        >
                          <div
                            className="sc-ksluID fMRnJV"
                          />
                        </styled.div>
                      </div>
                    </styled.div>
                    <div>
                      skills.software_engineering
                    </div>
                  </div>
                </styled.div>
              </ProgressIndicator>
              <ProgressIndicator
                description="skills.front (skills.react)"
                percentage={90}
              >
                <styled.div>
                  <div
                    className="sc-dIsUp kRpPEh"
                  >
                    <styled.div>
                      <div
                        className="sc-bqGGPW jUrrst"
                      >
                        <styled.div
                          percentage={90}
                        >
                          <div
                            className="sc-ksluID gQyraI"
                          />
                        </styled.div>
                      </div>
                    </styled.div>
                    <div>
                      skills.front (skills.react)
                    </div>
                  </div>
                </styled.div>
              </ProgressIndicator>
              <ProgressIndicator
                description="skills.back (skills.node, skills.dotnet)"
                percentage={50}
              >
                <styled.div>
                  <div
                    className="sc-dIsUp kRpPEh"
                  >
                    <styled.div>
                      <div
                        className="sc-bqGGPW jUrrst"
                      >
                        <styled.div
                          percentage={50}
                        >
                          <div
                            className="sc-ksluID gSttvk"
                          />
                        </styled.div>
                      </div>
                    </styled.div>
                    <div>
                      skills.back (skills.node, skills.dotnet)
                    </div>
                  </div>
                </styled.div>
              </ProgressIndicator>
              <ProgressIndicator
                description="skills.db"
                percentage={25}
              >
                <styled.div>
                  <div
                    className="sc-dIsUp kRpPEh"
                  >
                    <styled.div>
                      <div
                        className="sc-bqGGPW jUrrst"
                      >
                        <styled.div
                          percentage={25}
                        >
                          <div
                            className="sc-ksluID gXCOhW"
                          />
                        </styled.div>
                      </div>
                    </styled.div>
                    <div>
                      skills.db
                    </div>
                  </div>
                </styled.div>
              </ProgressIndicator>
              <ProgressIndicator
                description="skills.devops"
                percentage={50}
              >
                <styled.div>
                  <div
                    className="sc-dIsUp kRpPEh"
                  >
                    <styled.div>
                      <div
                        className="sc-bqGGPW jUrrst"
                      >
                        <styled.div
                          percentage={50}
                        >
                          <div
                            className="sc-ksluID gSttvk"
                          />
                        </styled.div>
                      </div>
                    </styled.div>
                    <div>
                      skills.devops
                    </div>
                  </div>
                </styled.div>
              </ProgressIndicator>
              <ProgressIndicator
                description="skills.automated_tests"
                percentage={90}
              >
                <styled.div>
                  <div
                    className="sc-dIsUp kRpPEh"
                  >
                    <styled.div>
                      <div
                        className="sc-bqGGPW jUrrst"
                      >
                        <styled.div
                          percentage={90}
                        >
                          <div
                            className="sc-ksluID gQyraI"
                          />
                        </styled.div>
                      </div>
                    </styled.div>
                    <div>
                      skills.automated_tests
                    </div>
                  </div>
                </styled.div>
              </ProgressIndicator>
            </div>
          </styled.div>
        </section>
      </Skills>
      <Experience>
        <section
          id="experience"
        >
          <h2>
            button.experience
          </h2>
          <styled.div>
            <div
              className="sc-hHEiqL hQxvaI"
            >
              <Project
                description="desc.hp"
                image={
                  <SiHp
                    color="#0096D6"
                  />
                }
                key="0"
                subtitle="subtitle"
                title="HP Inc."
              >
                <styled.div>
                  <div
                    className="sc-hBMUJo bXVrzm"
                  >
                    <div>
                      <SiHp
                        color="#0096D6"
                      >
                        <IconBase
                          attr={
                            Object {
                              "role": "img",
                              "viewBox": "0 0 24 24",
                            }
                          }
                          color="#0096D6"
                        >
                          <svg
                            color="#0096D6"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            stroke="currentColor"
                            strokeWidth="0"
                            style={
                              Object {
                                "color": "#0096D6",
                              }
                            }
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <title
                              key="0"
                            />
                            <path
                              d="M12 24h-.4l2.5-6.7h3.4c.6 0 1.2-.5 1.4-1L21.6 9c.4-1.2-.3-2.2-1.5-2.2h-4.7l-3.9 10.8-2.2 6.1C3.9 22.4 0 17.7 0 12 0 6.5 3.7 1.9 8.8.4L6.5 6.8 2.6 17.3h2.5l3.2-8.9h1.9L7 17.3h2.5l3-8.3c.4-1.2-.2-2.2-1.5-2.2H9L11.5 0h.5c6.6 0 12 5.4 12 12s-5.4 12-12 12zm7.3-15.7h-1.9l-2.7 7.3h1.9l2.7-7.3z"
                              key="1"
                            />
                          </svg>
                        </IconBase>
                      </SiHp>
                    </div>
                    <h3>
                      HP Inc.
                    </h3>
                    <h4>
                      subtitle
                    </h4>
                    <p>
                      desc.hp
                    </p>
                  </div>
                </styled.div>
              </Project>
              <Project
                description="desc.dell"
                image={
                  <SiDell
                    color="#007DB8"
                  />
                }
                key="1"
                subtitle="subtitle"
                title="Dell Inc."
              >
                <styled.div>
                  <div
                    className="sc-hBMUJo bXVrzm"
                  >
                    <div>
                      <SiDell
                        color="#007DB8"
                      >
                        <IconBase
                          attr={
                            Object {
                              "role": "img",
                              "viewBox": "0 0 24 24",
                            }
                          }
                          color="#007DB8"
                        >
                          <svg
                            color="#007DB8"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            stroke="currentColor"
                            strokeWidth="0"
                            style={
                              Object {
                                "color": "#007DB8",
                              }
                            }
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <title
                              key="0"
                            />
                            <path
                              d="M17.963 14.6V9.324h1.222v4.204h2.14v1.07h-3.362zm-9.784-3.288l2.98-2.292c.281.228.56.458.841.687l-2.827 2.14.611.535 2.827-2.216c.281.228.56.458.841.688a295.83 295.83 0 0 1-2.827 2.216l.61.536 2.83-2.295-.001-1.986h1.223v4.204h2.216v1.07h-3.362v-1.987c-.995.763-1.987 1.529-2.981 2.292l-2.981-2.292c-.144.729-.653 1.36-1.312 1.694-.285.147-.597.24-.915.276-.183.022-.367.017-.551.017H3.516V9.325H5.69a2.544 2.544 0 0 1 1.563.557c.454.36.778.872.927 1.43m-3.516-.917v3.21l.953-.001a1.377 1.377 0 0 0 1.036-.523 1.74 1.74 0 0 0 .182-1.889 1.494 1.494 0 0 0-.976-.766c-.166-.04-.338-.03-.507-.032h-.688zM11.82 0h.337a11.94 11.94 0 0 1 5.405 1.373 12.101 12.101 0 0 1 4.126 3.557A11.93 11.93 0 0 1 24 11.82v.36a11.963 11.963 0 0 1-3.236 8.033A11.967 11.967 0 0 1 12.182 24h-.361a11.993 11.993 0 0 1-4.145-.806 12.04 12.04 0 0 1-4.274-2.836A12.057 12.057 0 0 1 .576 15.67 12.006 12.006 0 0 1 0 12.181v-.361a11.924 11.924 0 0 1 1.992-6.396 12.211 12.211 0 0 1 4.71-4.172A11.875 11.875 0 0 1 11.82 0m-.153 1.23a10.724 10.724 0 0 0-6.43 2.375 10.78 10.78 0 0 0-3.319 4.573 10.858 10.858 0 0 0 .193 8.12 10.788 10.788 0 0 0 3.546 4.421 10.698 10.698 0 0 0 4.786 1.946c1.456.209 2.955.124 4.376-.26a10.756 10.756 0 0 0 5.075-3.062 10.742 10.742 0 0 0 2.686-5.28 10.915 10.915 0 0 0-.122-4.682 10.77 10.77 0 0 0-7.098-7.626 10.78 10.78 0 0 0-3.693-.525z"
                              key="1"
                            />
                          </svg>
                        </IconBase>
                      </SiDell>
                    </div>
                    <h3>
                      Dell Inc.
                    </h3>
                    <h4>
                      subtitle
                    </h4>
                    <p>
                      desc.dell
                    </p>
                  </div>
                </styled.div>
              </Project>
              <Project
                description="desc.intern"
                image={
                  <img
                    src="test-file-stub"
                  />
                }
                key="2"
                subtitle="desc.research_intern"
                title="PUCRS"
              >
                <styled.div>
                  <div
                    className="sc-hBMUJo bXVrzm"
                  >
                    <div>
                      <img
                        src="test-file-stub"
                      />
                    </div>
                    <h3>
                      PUCRS
                    </h3>
                    <h4>
                      desc.research_intern
                    </h4>
                    <p>
                      desc.intern
                    </p>
                  </div>
                </styled.div>
              </Project>
              <Project
                description="desc.ginatells"
                image={
                  <GiClapperboard
                    color="#FF7F00"
                  />
                }
                key="3"
                subtitle="desc.personal_project"
                title="Gina Tells"
              >
                <styled.div>
                  <div
                    className="sc-hBMUJo bXVrzm"
                  >
                    <div>
                      <GiClapperboard
                        color="#FF7F00"
                      >
                        <IconBase
                          attr={
                            Object {
                              "viewBox": "0 0 512 512",
                            }
                          }
                          color="#FF7F00"
                        >
                          <svg
                            color="#FF7F00"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            strokeWidth="0"
                            style={
                              Object {
                                "color": "#FF7F00",
                              }
                            }
                            viewBox="0 0 512 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M419.682 26.2l-8.66 2.452L32.915 135.81 55.27 214.7l386.77-109.608L419.683 26.2zm-12.41 22.224l9.074 32.014-41.086-22.942 32.013-9.072zM350.77 64.438l56.8 31.714-37.084 10.51-56.8-31.715 37.084-10.51zm-61.577 17.45l56.803 31.716-37.084 10.51-56.8-31.718 37.08-10.51zm-61.574 17.45l56.802 31.715-37.084 10.51-56.803-31.715 37.084-10.51zm-61.577 17.45l56.803 31.716-37.084 10.51-56.8-31.717 37.08-10.51zm-61.574 17.45l56.8 31.715-37.083 10.51-56.802-31.715 37.084-10.51zm-45.86 26.227l41.085 22.94-32.01 9.072-9.074-32.012zM55 215v274h402V215H55zm18 18h33.273L73 266.273V233zm58.727 0h38.546l-46 46H85.727l46-46zm64 0h38.546l-46 46h-38.546l46-46zm64 0h38.546l-46 46h-38.546l46-46zm64 0h38.546l-46 46h-38.546l46-46zm64 0h38.546l-46 46h-38.546l46-46zM439 245.727V279h-33.273L439 245.727zM73 297h366v174H73V297zm248.635 46.57l-192.44.703.067 18 192.44-.703-.067-18zM130.7 391.33l-.134 17.998 92.707.703.137-18-92.71-.7zm127.155.7l-.2 18 63.913.702.2-17.998-63.913-.703z"
                              key="0"
                            />
                          </svg>
                        </IconBase>
                      </GiClapperboard>
                    </div>
                    <h3>
                      Gina Tells
                    </h3>
                    <h4>
                      desc.personal_project
                    </h4>
                    <p>
                      desc.ginatells
                    </p>
                  </div>
                </styled.div>
              </Project>
              <Project
                description="desc.kpis"
                image={
                  <GiProgression
                    color="#0E6B0E"
                  />
                }
                key="4"
                subtitle="desc.personal_project"
                title="Software KPIs"
              >
                <styled.div>
                  <div
                    className="sc-hBMUJo bXVrzm"
                  >
                    <div>
                      <GiProgression
                        color="#0E6B0E"
                      >
                        <IconBase
                          attr={
                            Object {
                              "viewBox": "0 0 512 512",
                            }
                          }
                          color="#0E6B0E"
                        >
                          <svg
                            color="#0E6B0E"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            strokeWidth="0"
                            style={
                              Object {
                                "color": "#0E6B0E",
                              }
                            }
                            viewBox="0 0 512 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M463 20.3L315.6 75.65 368.5 109C274 228 137.3 301.3 21.8 329.2l32.72 59.6C184.3 346.5 321.7 270.2 410.2 135.4l40.3 25.4L463 20.3zm7.7 116.7l-4.8 54.8-51.3-32.4c-1.8 2.7-3.7 5.3-5.6 8V487h78V137h-16.3zM320.1 265c-12.7 11-25.8 21.4-39.1 31.2V487h78V265h-38.9zm-123.7 84c-14.4 7.6-28.8 14.6-43.4 21.2V487h78V349h-34.6zM25 393v94h78v-94h-5.68c-14.82 5.5-29.63 10.6-44.35 15.3l-7.06 2.2-9.6-17.5H25z"
                              key="0"
                            />
                          </svg>
                        </IconBase>
                      </GiProgression>
                    </div>
                    <h3>
                      Software KPIs
                    </h3>
                    <h4>
                      desc.personal_project
                    </h4>
                    <p>
                      desc.kpis
                    </p>
                  </div>
                </styled.div>
              </Project>
              <Project
                description="desc.ages"
                image={
                  <img
                    src="test-file-stub"
                  />
                }
                key="5"
                subtitle="desc.nonprofit_engineer"
                title="AGES"
              >
                <styled.div>
                  <div
                    className="sc-hBMUJo bXVrzm"
                  >
                    <div>
                      <img
                        src="test-file-stub"
                      />
                    </div>
                    <h3>
                      AGES
                    </h3>
                    <h4>
                      desc.nonprofit_engineer
                    </h4>
                    <p>
                      desc.ages
                    </p>
                  </div>
                </styled.div>
              </Project>
            </div>
          </styled.div>
        </section>
      </Experience>
      <Contact>
        <footer
          id="contact"
        >
          <styled.div>
            <div
              className="sc-dlMDgC foeJtd"
            >
              <SocialNetworks>
                <styled.div>
                  <div
                    className="sc-kEqXSa bgIIai"
                  >
                    <a
                      href="https://wa.me/5551980254545"
                      target="_blank"
                      title="https://wa.me/5551980254545"
                    >
                      <FaWhatsapp
                        size="46"
                      >
                        <IconBase
                          attr={
                            Object {
                              "viewBox": "0 0 448 512",
                            }
                          }
                          size="46"
                        >
                          <svg
                            fill="currentColor"
                            height="46"
                            stroke="currentColor"
                            strokeWidth="0"
                            style={
                              Object {
                                "color": undefined,
                              }
                            }
                            viewBox="0 0 448 512"
                            width="46"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"
                              key="0"
                            />
                          </svg>
                        </IconBase>
                      </FaWhatsapp>
                    </a>
                    <a
                      href="https://github.com/IsraelDeorce"
                      target="_blank"
                      title="https://github.com/IsraelDeorce"
                    >
                      <FaGithub
                        size="46"
                      >
                        <IconBase
                          attr={
                            Object {
                              "viewBox": "0 0 496 512",
                            }
                          }
                          size="46"
                        >
                          <svg
                            fill="currentColor"
                            height="46"
                            stroke="currentColor"
                            strokeWidth="0"
                            style={
                              Object {
                                "color": undefined,
                              }
                            }
                            viewBox="0 0 496 512"
                            width="46"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                              key="0"
                            />
                          </svg>
                        </IconBase>
                      </FaGithub>
                    </a>
                    <a
                      href="https://www.linkedin.com/in/israeldeorce"
                      target="_blank"
                      title="https://www.linkedin.com/in/israeldeorce"
                    >
                      <FaLinkedin
                        size="46"
                      >
                        <IconBase
                          attr={
                            Object {
                              "viewBox": "0 0 448 512",
                            }
                          }
                          size="46"
                        >
                          <svg
                            fill="currentColor"
                            height="46"
                            stroke="currentColor"
                            strokeWidth="0"
                            style={
                              Object {
                                "color": undefined,
                              }
                            }
                            viewBox="0 0 448 512"
                            width="46"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                              key="0"
                            />
                          </svg>
                        </IconBase>
                      </FaLinkedin>
                    </a>
                    <a
                      href="mailto: israel.idvj@gmail.com"
                      target="_blank"
                      title="israel.idvj@gmail.com"
                    >
                      <FaEnvelope
                        size="46"
                      >
                        <IconBase
                          attr={
                            Object {
                              "viewBox": "0 0 512 512",
                            }
                          }
                          size="46"
                        >
                          <svg
                            fill="currentColor"
                            height="46"
                            stroke="currentColor"
                            strokeWidth="0"
                            style={
                              Object {
                                "color": undefined,
                              }
                            }
                            viewBox="0 0 512 512"
                            width="46"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
                              key="0"
                            />
                          </svg>
                        </IconBase>
                      </FaEnvelope>
                    </a>
                  </div>
                </styled.div>
              </SocialNetworks>
              <styled.div>
                <div
                  className="sc-kfYoZR iXGPkS"
                >
                  <p>
                    israel.idvj@gmail.com
                  </p>
                  <p>
                    +55 (51) 98025-4545
                  </p>
                  <p>
                    Porto Alegre - br
                  </p>
                </div>
              </styled.div>
            </div>
          </styled.div>
          <Copyright>
            <styled.div>
              <div
                className="sc-fnVZcZ HaGRW"
              >
                Copyright 
                <FaRegCopyright>
                  <IconBase
                    attr={
                      Object {
                        "viewBox": "0 0 512 512",
                      }
                    }
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 448c-110.532 0-200-89.451-200-200 0-110.531 89.451-200 200-200 110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200zm107.351-101.064c-9.614 9.712-45.53 41.396-104.065 41.396-82.43 0-140.484-61.425-140.484-141.567 0-79.152 60.275-139.401 139.762-139.401 55.531 0 88.738 26.62 97.593 34.779a11.965 11.965 0 0 1 1.936 15.322l-18.155 28.113c-3.841 5.95-11.966 7.282-17.499 2.921-8.595-6.776-31.814-22.538-61.708-22.538-48.303 0-77.916 35.33-77.916 80.082 0 41.589 26.888 83.692 78.277 83.692 32.657 0 56.843-19.039 65.726-27.225 5.27-4.857 13.596-4.039 17.82 1.738l19.865 27.17a11.947 11.947 0 0 1-1.152 15.518z"
                        key="0"
                      />
                    </svg>
                  </IconBase>
                </FaRegCopyright>
                 
                copyright
              </div>
            </styled.div>
          </Copyright>
        </footer>
      </Contact>
    </div>
  </styled.div>
</Portfolio>
`;

exports[`<Portfolio/> Snapshot renders without crashing using render 1`] = `
<div
  class="sc-fKgJPI drgXhq"
>
  <section
    class="sc-fFSPTT UxeRs"
    id="home"
  >
    <h1>
      Israel Deorce
    </h1>
    <p
      class="sc-bkbkJK jhAOQg subtitle"
    >
      subtitle
    </p>
    <div
      class="sc-bdnxRM jJHyKE"
    >
      <button
        class="sc-crzoAE hOvMwS"
      >
        <span>
          button.visit_my_blog
        </span>
      </button>
      <button
        class="sc-crzoAE foTsck"
      >
        <span>
          button.resume
        </span>
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"
          />
        </svg>
      </button>
    </div>
  </section>
  <section
    id="about"
  >
    <h2>
      button.about_me
    </h2>
    <div
      class="sc-iemWCZ cVeLS"
    >
      <p>
        desc.about_1
      </p>
      <p>
        desc.about_2
      </p>
    </div>
  </section>
  <section
    id="skills"
  >
    <h2>
      button.skills
    </h2>
    <div
      class="sc-dIvrsQ wBbOE"
    >
      <div
        class="sc-dIsUp kRpPEh"
      >
        <div
          class="sc-bqGGPW jUrrst"
        >
          <div
            class="sc-ksluID fMRnJV"
          />
        </div>
        <div>
          skills.software_engineering
        </div>
      </div>
      <div
        class="sc-dIsUp kRpPEh"
      >
        <div
          class="sc-bqGGPW jUrrst"
        >
          <div
            class="sc-ksluID gQyraI"
          />
        </div>
        <div>
          skills.front (skills.react)
        </div>
      </div>
      <div
        class="sc-dIsUp kRpPEh"
      >
        <div
          class="sc-bqGGPW jUrrst"
        >
          <div
            class="sc-ksluID gSttvk"
          />
        </div>
        <div>
          skills.back (skills.node, skills.dotnet)
        </div>
      </div>
      <div
        class="sc-dIsUp kRpPEh"
      >
        <div
          class="sc-bqGGPW jUrrst"
        >
          <div
            class="sc-ksluID gXCOhW"
          />
        </div>
        <div>
          skills.db
        </div>
      </div>
      <div
        class="sc-dIsUp kRpPEh"
      >
        <div
          class="sc-bqGGPW jUrrst"
        >
          <div
            class="sc-ksluID gSttvk"
          />
        </div>
        <div>
          skills.devops
        </div>
      </div>
      <div
        class="sc-dIsUp kRpPEh"
      >
        <div
          class="sc-bqGGPW jUrrst"
        >
          <div
            class="sc-ksluID gQyraI"
          />
        </div>
        <div>
          skills.automated_tests
        </div>
      </div>
    </div>
  </section>
  <section
    id="experience"
  >
    <h2>
      button.experience
    </h2>
    <div
      class="sc-hHEiqL hQxvaI"
    >
      <div
        class="sc-hBMUJo bXVrzm"
      >
        <div>
          <svg
            color="#0096D6"
            fill="currentColor"
            height="1em"
            role="img"
            stroke="currentColor"
            stroke-width="0"
            style="color:#0096D6"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title />
            <path
              d="M12 24h-.4l2.5-6.7h3.4c.6 0 1.2-.5 1.4-1L21.6 9c.4-1.2-.3-2.2-1.5-2.2h-4.7l-3.9 10.8-2.2 6.1C3.9 22.4 0 17.7 0 12 0 6.5 3.7 1.9 8.8.4L6.5 6.8 2.6 17.3h2.5l3.2-8.9h1.9L7 17.3h2.5l3-8.3c.4-1.2-.2-2.2-1.5-2.2H9L11.5 0h.5c6.6 0 12 5.4 12 12s-5.4 12-12 12zm7.3-15.7h-1.9l-2.7 7.3h1.9l2.7-7.3z"
            />
          </svg>
        </div>
        <h3>
          HP Inc.
        </h3>
        <h4>
          subtitle
        </h4>
        <p>
          desc.hp
        </p>
      </div>
      <div
        class="sc-hBMUJo bXVrzm"
      >
        <div>
          <svg
            color="#007DB8"
            fill="currentColor"
            height="1em"
            role="img"
            stroke="currentColor"
            stroke-width="0"
            style="color:#007DB8"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title />
            <path
              d="M17.963 14.6V9.324h1.222v4.204h2.14v1.07h-3.362zm-9.784-3.288l2.98-2.292c.281.228.56.458.841.687l-2.827 2.14.611.535 2.827-2.216c.281.228.56.458.841.688a295.83 295.83 0 0 1-2.827 2.216l.61.536 2.83-2.295-.001-1.986h1.223v4.204h2.216v1.07h-3.362v-1.987c-.995.763-1.987 1.529-2.981 2.292l-2.981-2.292c-.144.729-.653 1.36-1.312 1.694-.285.147-.597.24-.915.276-.183.022-.367.017-.551.017H3.516V9.325H5.69a2.544 2.544 0 0 1 1.563.557c.454.36.778.872.927 1.43m-3.516-.917v3.21l.953-.001a1.377 1.377 0 0 0 1.036-.523 1.74 1.74 0 0 0 .182-1.889 1.494 1.494 0 0 0-.976-.766c-.166-.04-.338-.03-.507-.032h-.688zM11.82 0h.337a11.94 11.94 0 0 1 5.405 1.373 12.101 12.101 0 0 1 4.126 3.557A11.93 11.93 0 0 1 24 11.82v.36a11.963 11.963 0 0 1-3.236 8.033A11.967 11.967 0 0 1 12.182 24h-.361a11.993 11.993 0 0 1-4.145-.806 12.04 12.04 0 0 1-4.274-2.836A12.057 12.057 0 0 1 .576 15.67 12.006 12.006 0 0 1 0 12.181v-.361a11.924 11.924 0 0 1 1.992-6.396 12.211 12.211 0 0 1 4.71-4.172A11.875 11.875 0 0 1 11.82 0m-.153 1.23a10.724 10.724 0 0 0-6.43 2.375 10.78 10.78 0 0 0-3.319 4.573 10.858 10.858 0 0 0 .193 8.12 10.788 10.788 0 0 0 3.546 4.421 10.698 10.698 0 0 0 4.786 1.946c1.456.209 2.955.124 4.376-.26a10.756 10.756 0 0 0 5.075-3.062 10.742 10.742 0 0 0 2.686-5.28 10.915 10.915 0 0 0-.122-4.682 10.77 10.77 0 0 0-7.098-7.626 10.78 10.78 0 0 0-3.693-.525z"
            />
          </svg>
        </div>
        <h3>
          Dell Inc.
        </h3>
        <h4>
          subtitle
        </h4>
        <p>
          desc.dell
        </p>
      </div>
      <div
        class="sc-hBMUJo bXVrzm"
      >
        <div>
          <img
            src="test-file-stub"
          />
        </div>
        <h3>
          PUCRS
        </h3>
        <h4>
          desc.research_intern
        </h4>
        <p>
          desc.intern
        </p>
      </div>
      <div
        class="sc-hBMUJo bXVrzm"
      >
        <div>
          <svg
            color="#FF7F00"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            style="color:#FF7F00"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M419.682 26.2l-8.66 2.452L32.915 135.81 55.27 214.7l386.77-109.608L419.683 26.2zm-12.41 22.224l9.074 32.014-41.086-22.942 32.013-9.072zM350.77 64.438l56.8 31.714-37.084 10.51-56.8-31.715 37.084-10.51zm-61.577 17.45l56.803 31.716-37.084 10.51-56.8-31.718 37.08-10.51zm-61.574 17.45l56.802 31.715-37.084 10.51-56.803-31.715 37.084-10.51zm-61.577 17.45l56.803 31.716-37.084 10.51-56.8-31.717 37.08-10.51zm-61.574 17.45l56.8 31.715-37.083 10.51-56.802-31.715 37.084-10.51zm-45.86 26.227l41.085 22.94-32.01 9.072-9.074-32.012zM55 215v274h402V215H55zm18 18h33.273L73 266.273V233zm58.727 0h38.546l-46 46H85.727l46-46zm64 0h38.546l-46 46h-38.546l46-46zm64 0h38.546l-46 46h-38.546l46-46zm64 0h38.546l-46 46h-38.546l46-46zm64 0h38.546l-46 46h-38.546l46-46zM439 245.727V279h-33.273L439 245.727zM73 297h366v174H73V297zm248.635 46.57l-192.44.703.067 18 192.44-.703-.067-18zM130.7 391.33l-.134 17.998 92.707.703.137-18-92.71-.7zm127.155.7l-.2 18 63.913.702.2-17.998-63.913-.703z"
            />
          </svg>
        </div>
        <h3>
          Gina Tells
        </h3>
        <h4>
          desc.personal_project
        </h4>
        <p>
          desc.ginatells
        </p>
      </div>
      <div
        class="sc-hBMUJo bXVrzm"
      >
        <div>
          <svg
            color="#0E6B0E"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            style="color:#0E6B0E"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M463 20.3L315.6 75.65 368.5 109C274 228 137.3 301.3 21.8 329.2l32.72 59.6C184.3 346.5 321.7 270.2 410.2 135.4l40.3 25.4L463 20.3zm7.7 116.7l-4.8 54.8-51.3-32.4c-1.8 2.7-3.7 5.3-5.6 8V487h78V137h-16.3zM320.1 265c-12.7 11-25.8 21.4-39.1 31.2V487h78V265h-38.9zm-123.7 84c-14.4 7.6-28.8 14.6-43.4 21.2V487h78V349h-34.6zM25 393v94h78v-94h-5.68c-14.82 5.5-29.63 10.6-44.35 15.3l-7.06 2.2-9.6-17.5H25z"
            />
          </svg>
        </div>
        <h3>
          Software KPIs
        </h3>
        <h4>
          desc.personal_project
        </h4>
        <p>
          desc.kpis
        </p>
      </div>
      <div
        class="sc-hBMUJo bXVrzm"
      >
        <div>
          <img
            src="test-file-stub"
          />
        </div>
        <h3>
          AGES
        </h3>
        <h4>
          desc.nonprofit_engineer
        </h4>
        <p>
          desc.ages
        </p>
      </div>
    </div>
  </section>
  <footer
    id="contact"
  >
    <div
      class="sc-dlMDgC foeJtd"
    >
      <div
        class="sc-kEqXSa bgIIai"
      >
        <a
          href="https://wa.me/5551980254545"
          target="_blank"
          title="https://wa.me/5551980254545"
        >
          <svg
            fill="currentColor"
            height="46"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="46"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"
            />
          </svg>
        </a>
        <a
          href="https://github.com/IsraelDeorce"
          target="_blank"
          title="https://github.com/IsraelDeorce"
        >
          <svg
            fill="currentColor"
            height="46"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 496 512"
            width="46"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
            />
          </svg>
        </a>
        <a
          href="https://www.linkedin.com/in/israeldeorce"
          target="_blank"
          title="https://www.linkedin.com/in/israeldeorce"
        >
          <svg
            fill="currentColor"
            height="46"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="46"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
            />
          </svg>
        </a>
        <a
          href="mailto: israel.idvj@gmail.com"
          target="_blank"
          title="israel.idvj@gmail.com"
        >
          <svg
            fill="currentColor"
            height="46"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="46"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
            />
          </svg>
        </a>
      </div>
      <div
        class="sc-kfYoZR iXGPkS"
      >
        <p>
          israel.idvj@gmail.com
        </p>
        <p>
          +55 (51) 98025-4545
        </p>
        <p>
          Porto Alegre - br
        </p>
      </div>
    </div>
    <div
      class="sc-fnVZcZ HaGRW"
    >
      Copyright 
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 448c-110.532 0-200-89.451-200-200 0-110.531 89.451-200 200-200 110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200zm107.351-101.064c-9.614 9.712-45.53 41.396-104.065 41.396-82.43 0-140.484-61.425-140.484-141.567 0-79.152 60.275-139.401 139.762-139.401 55.531 0 88.738 26.62 97.593 34.779a11.965 11.965 0 0 1 1.936 15.322l-18.155 28.113c-3.841 5.95-11.966 7.282-17.499 2.921-8.595-6.776-31.814-22.538-61.708-22.538-48.303 0-77.916 35.33-77.916 80.082 0 41.589 26.888 83.692 78.277 83.692 32.657 0 56.843-19.039 65.726-27.225 5.27-4.857 13.596-4.039 17.82 1.738l19.865 27.17a11.947 11.947 0 0 1-1.152 15.518z"
        />
      </svg>
       copyright
    </div>
  </footer>
</div>
`;

exports[`<Portfolio/> Snapshot renders without crashing using shallow 1`] = `
<styled.div>
  <Home />
  <About />
  <Skills />
  <Experience />
  <Contact />
</styled.div>
`;
